# python-template

./: .commitlint.config.mjs  .dict-custom.txt  .git-commit-helper.json  .gitignore  .markdownlint.json  .pyspelling.yaml  .ruff.toml  .yamllint.yaml  CODEOWNERS  README.md  cliff.toml  pyproject.toml
.github/workflows/: actionlint.yaml  json.yaml  linkcheck.yaml  proselint.yaml  python-dependency-update.yaml  python.yaml  spellcheck.yaml  woke.yaml
src/helloworld/: __init__.py  __main__.py  main.py  prompt.py
tests/: test_main.py
